# balapatch

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/balapatch/: Cargo.toml
crates/balapatch/src/: main.rs
crates/balapatch/src/balapatch/: adb.rs  balatro.rs  mod.rs
crates/balapatch/src/balapatch/apk/: apk_utils.rs  apktool.rs  mod.rs  zipalign.rs
crates/balapatch/src/balapatch/cli/subcommands/: adb_connect.rs  mod.rs
crates/balapatch/src/balapatch/patch/: instructor.rs  mod.rs  the_lovers.rs
crates/balapatch/src/balapatch/tui/: adb_wireless_input.rs  balapatch.rs  mod.rs  mode_select.rs  progress.rs  select_file.rs
crates/balapatch/src/balapatch/utils/: grammar_police.rs  misc.rs  mod.rs  string_buf.rs  writer.rs
crates/balapatch_derive/: Cargo.toml
crates/balapatch_derive/src/: enum_macros.rs  lib.rs  struct_macros.rs  utils.rs
crates/lua_validator/: Cargo.toml  owo.txt
crates/lua_validator/src/: lib.rs
src/: adb.rs  apk.rs  balatro.rs  main.rs  utils.rs  zipalign.rs
src/balapatch/: adb.rs  balatro.rs  mod.rs
src/balapatch/apk/: apktool.rs  mod.rs
src/balapatch/cli/: mod.rs  program.rs
src/balapatch/cli/subcommands/: adb_connect.rs
src/balapatch/tui/: adb_wireless_input.rs  mod.rs  mode_select.rs  select_file.rs
src/balapatch/utils/: mod.rs  string_buf.rs  writer.rs
src/cli/: clap_cli.rs  mod.rs  program.rs
src/cli/prompts/: select_file.rs
