[package]
name = "balapatch"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A modding utility for Balatro Android"
keywords = ["modding", "balatro", "android"]
readme = "README.md"
authors = ["TheBearodactyl"]

[dependencies]
adb_client = "2.1.7"
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
flate2 = "1.0.35"
fuzzy-matcher = "0.3.7"
inquire = "0.7.5"
java-locator = "0.1.9"
reqwest = { version = "0.12.12", features = ["blocking"] }
tokio = { version = "1.43.0", features = ["full"] }
which = "7.0.2"
zip = "2.2.2"
