[package]
name = "balapatch"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A modding utility for Balatro Android"
keywords = ["modding", "balatro", "android"]
readme = "../../README.md"
authors = ["TheBearodactyl"]

[dependencies]
adb_client = "2.1.7"
anyhow = "1.0.96"
fuzzy-matcher = "0.3.7"
inquire = "0.7.5"
java-locator = "0.1.9"
reqwest = { version = "0.12.12", features = ["stream"] }
which = "7.0.2"
zip = "2.2.2"
smali = "0.1.0"
tracing = "0.1.41"
tokio = { version = "1.43.0", features = ["full"] }
indicatif = { version = "0.17.11", features = ["tokio"] }
once_cell = "1.20.3"
tokio-stream = "0.1.17"
rayon = "1.10.0"
balapatch_derive = { version = "0.1.0", path = "../balapatch_derive" }
lovely-core = { git = "https://github.com/ethangreen-dev/lovely-injector", version = "0.7.1" }
crop = "0.4.2"
toml = "0.8.20"
